--- a/hive-ml/Cargo.toml
+++ b/hive-ml/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 tch = "0.19.0"
 hive-engine = { path = "../hive-engine" }
+rand = "*"
+opentelemetry = "*"
+opentelemetry_sdk = "*"
+opentelemetry-otlp = "*"
