--- a/hive-ml/Cargo.toml
+++ b/hive-ml/Cargo.toml
@@ -8,6 +8,7 @@ tch = "0.19.0"
 hive-engine = { path = "../hive-engine" }
 rand = { version="*", features=["small_rng"] }
 chrono = "*"
+fastbloom = "*"
 opentelemetry = "*"
 opentelemetry_sdk = "*"
 opentelemetry-otlp = "*"
